# passtool

./: .gitignore  Cargo.toml  README.md  build.rs  passtool-manifest.rc  passtool.exe.manifest
src/: app.rs  generator.rs  lib.rs  main.rs
tests/: integration_test.rs
