[package]
name = "passtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.11.1"
bincode = "1.3.3"
hex-literal = "0.4.1"
random-string = "1.1.0"
serde = {version = "1.0.196", features = ["derive"]}
sha2 = "0.10.8"
