[package]
name = "passtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.11.1"
bincode = "1.3.3"
hex-literal = "0.4.1"
native-windows-derive = "1.0.5"
native-windows-gui = "1.0.13"
random-string = "1.1.0"
serde = {version = "1.0.196", features = ["derive"]}
serial_test = "3.0.0"
sha2 = "0.10.8"
winapi = "0.3.9"
